01-kubernetes_101/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - port: 9000 # the service port you decide to expose # you can contact the service inside the pod (i.e. using a netshoot pod) and curl <svc-ip>:9000
      targetPort: 80 # the nginx port
  selector:
    app: my-app
