01-kubernetes_101/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: myingress.localingress.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: myingress
                port:
                  number: 80
